--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -19,6 +19,19 @@
     <%= f.label :birthdate %><br />
     <%= f.date_select :birthdate %>
   </div>
+  <div class="field">
+     <%= f.label :breed %><br />
+     <%= f.text_field :breed %>
+  </div>
+  <div class="field">
+      <%= f.label :gender %><br />
+      <%= f.radio_button :gender, "m" %>
+      <%= label :gender, 'Male' %>
+      <%= f.radio_button :gender, "f" %>
+      <%= label :gender, 'Female' %>
+    
+      
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
