--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -13,6 +13,8 @@
   <tr>
     <td><%= pet.name %></td>
     <td><%= pet.birthdate %></td>
+    <td><%= pet.breed %></td>
+    <td><%= pet.gender %></td>
     <td><%= link_to 'Show', pet %></td>
     <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
     <td><%= link_to 'Destroy', pet, confirm: 'Are you sure?', method: :delete %></td>
