--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,8 @@
 <!doctype html>
+  <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+  <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+  <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+  <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,6 +11,23 @@
     <title>Waggle</title>
     <meta name="description" content="">
     <meta name="author" content="">
+   
+   
+    	<!--[if lt IE 9]>
+    		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    	<![endif]-->
+
+    	<!-- Mobile Specific Metas
+      ================================================== -->
+    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    	<!-- CSS
+      ================================================== -->
+    
+      <%= stylesheet_link_tag    "base" %>
+      <%= stylesheet_link_tag    "skeleton" %>
+      <%= stylesheet_link_tag    "layout" %>
+    
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
