--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@pet) do |f| %>
+<%= form_for @pet, :html => { :multipart => true } do |f| %>
   <% if @pet.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@pet.errors.count, "error") %> prohibited this pet from being saved:</h2>
@@ -32,6 +32,11 @@
     
       
   </div>
+  <div class="field">
+      <%= f.label :avatar %><br />
+      <%= f.file_field :avatar %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
