--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -17,8 +17,75 @@
 /* #Site Styles
 ================================================== */
 
+h1.top{
+	font-family: 'Fascinate', cursive;
+}
+.orange{
+	color:#D55C27;
+}
+h2{
+	color:#222;
+}
 /* #Page Styles
 ================================================== */
+#menu				{ float:left;  z-index:10; margin:50px 0px 0 -40px; }
+
+#menu a	{ 
+	background:#D55C27; 
+	color:#FFF; 
+	text-decoration:none;
+	padding:6px 14px;
+	font-family: "Georgia", "Times New Roman", Helvetica, Arial, sans-serif;
+	font-size:13px;
+	margin-left:15px;
+	border-radius:10px; 
+	-moz-border-radius:10px; 
+	-webkit-border-radius:10px; 
+	text-transform:uppercase;
+	-webkit-transition-property: color, background;
+	 -webkit-transition-duration: 0.5s, 0.5s;
+	-moz-transition: color, background 0.5s ease-in; /* firefox */
+	 -o-transition: color, background 0.5s ease-in; /* opera */
+	 -webkit-transition-timing-function: linear, ease-in;
+	}
+					
+#menu a:hover {
+	background:#FBA83E; 
+	color:#FFF;
+	text-decoration:none;
+	padding:6px 14px;
+	margin-left:15px;
+	border-radius:10px;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	text-shadow: 0px 1px 3px #777;
+	}
+
+#menu a.selected	{ background:#FBA83E; color:#FFF; text-decoration:none; padding:6px 14px;
+						margin-left:15px; border-radius:10px; -moz-border-radius:10px; -webkit-border-radius:10px; text-shadow: 0px 1px 2px #111;}
+					
+#menu li			{ float:left; }
+
+a#login{
+	display:block;
+	float:right;
+	margin:50px 40px 0 0;
+	font-weight:bold;
+	z-index:10;
+	color:#222;
+	text-decoration:none;
+	font-size:13px;
+}
+a#login:hover{
+	text-decoration:underline;
+}
+
+.trans{
+	height: 9px;
+	margin: 0;
+	background: url(../images/trans.png) no-repeat top;
+	opacity: 0.16;	
+}
 
 /* #Media Queries
 ================================================== */
