--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,26 +1,75 @@
 
-			
-		<div class="sixteen columns" style="margin-top:30px">
-			<div class="seven columns alpha">
-				<%= image_tag("dogi.jpg") %>
-			</div>
-			<div class="nine columns omega">
-				<h2 style="margin-top: 30px"><span class="orange">W</span>aggle<span class="orange">A</span>pp helps you care for your dog...</h2>
-				<h2 style="margin-top: 20px">
+<div class="sixteen columns" style="margin-top:30px">
+	<div class="seven columns alpha">
+		<%= image_tag("dogi.jpg") %>
+	</div>
+	<div class="nine columns omega">
+		<h2 style="margin-top: 30px"><span class="orange">W</span>aggle<span class="orange">A</span>pp helps you care for your dog...</h2>
+		<h2 style="margin-top: 20px">
 
-				Get updates on Fido's every move - bowel or otherwise.</h2>
-			</div>
-		</div>
-		<div class="sixteen columns trans" style="margin-bottom:20px"></div>
-		<div class="one-third column">
-			<h3>Testimonial</h3>
-			
-		</div>
-		<div class="one-third column">
-			<h3>Some Article</h3>
-		
-		</div>
-		<div class="one-third column">
-			<h3>Twitter Feed</h3>
-			
-		</div>
+		Get updates on Fido's every move - bowel or otherwise.</h2>
+	</div>
+</div>
+<div class="sixteen columns trans" style="margin-bottom:20px"></div>
+<div class="row clearfix">
+<div class="one-third column">
+	<h3>Who uses WaggleApp</h3>
+	 <p class="quote">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum fringilla sapien, vel feugiat lacus tincidunt id. Vivamus mi lacus, volutpat in cursus nec, vehicula ornare diam.<span class="quote-end"></span>
+	</p>
+	<p style="float:right; margin:-15px 20px 0 0"> Thomas Alba Edison</p>
+	<br>
+	<p class="quote">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum fringilla sapien, vel feugiat lacus tincidunt id. Vivamus mi lacus, volutpat in cursus nec, vehicula ornare diam.<span class="quote-end"></span>
+	</p>
+	<p style="float:right; margin:-15px 20px 0 0"> Michael Jordan</p>
+</div>
+<div class="one-third column">
+	<h3>Why WaggleApp</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum fringilla sapien, vel feugiat lacus tincidunt id. Vivamus mi lacus, volutpat in cursus nec, vehicula ornare diam.<br /><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum fringilla sapien, vel feugiat lacus tincidunt id. Vivamus mi lacus, volutpat in cursus nec, vehicula ornare diam. <br /><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum fringilla sapien, vel feugiat lacus tincidunt id. </p>
+</div>
+<div class="one-third column">
+	<script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
+	<script>
+	new TWTR.Widget({
+	  version: 2,
+	  type: 'profile',
+	  rpp: 3,
+	  interval: 30000,
+	  width: 280,
+	  height: 230,
+	  theme: {
+	    shell: {
+	      background: '#555555',
+	      color: '#ffffff'
+	    },
+	    tweets: {
+	      background: '#ffffff',
+	      color: '#222222',
+	      links: '#d55b27'
+	    }
+	  },
+	  features: {
+	    scrollbar: true,
+	    loop: false,
+	    live: false,
+	    behavior: 'default'
+	  }
+	}).render().setUser('waggleapp').start();
+	</script>
+</div>
+</div>
+<hr>
+<div class="row clearfix">
+<div class="sixteen columns">
+	<div class="eight columns alpha">
+	WaggleApp 2012 &copy; 
+	</div>
+	<div class="eight columns omega">
+		<ul id="social">
+			<li><a class="fb" href="http://www.facebook.com/WaggleApp" target="_blank">Facebook</a></li>
+			<li><a class="twit" href="https://twitter.com/waggleapp" target="_blank">Twitter</a></li>
+		</ul>
+	</div>
+</div>
+</div>
